--- a/MeusPilas/.gitignore
+++ b/MeusPilas/.gitignore
@@ -34,9 +34,11 @@ Thumbs.db
 .project
 
 # Android Studio
+**/*.iml
 *.iml
 .idea
 #.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+**/*.gradle
 .gradle
 build/
 
