--- a/MeusPilas/app/build.gradle
+++ b/MeusPilas/app/build.gradle
@@ -21,11 +21,12 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile files('libs/db4o-8.0.249.16098-core-java5.jar')
     compile 'com.google.android.gms:play-services-plus:7.3.0'
     compile 'com.google.android.gms:play-services-identity:7.3.0'
     compile 'com.google.android.gms:play-services-base:7.3.0'
     compile 'com.google:google:5'
-    compile 'com.google.android.gms:play-services:7.3.0'
-    compile 'com.android.support:appcompat-v7:22.1.1'
-    compile files('libs/db4o-8.0.249.16098-core-java5.jar')
+    compile 'com.google.android.gms:play-services:8.1.0'
+    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:design:22.2.1'
 }
